--- a/components/About/About.module.scss
+++ b/components/About/About.module.scss
@@ -1,30 +1,53 @@
+@import "/styles/variables.scss";
+$ham-menu-res: 1024px;
 .container {
   width: 80%;
   margin-top: 6rem !important;
   margin: auto;
+  @media screen and (max-width: $mobileResolution){
+    position: relative;
+    top: 20rem;
+  }
   .minicontainer {
     display: flex;
     gap: 2.5rem;
-   
+    @media screen and (max-width: $mobileResolution){
+      flex-direction: column-reverse;
+    }
     .imgwraaper {
         // border: 2px solid #bebcc6;
         height: 460px;
         background: #e5e5e7;
         width: 50%;
         border-radius: 50%;
+        @media screen and (max-width: $mobileResolution){
+          position: relative;
+          top: 2rem;
+          right: 0.9rem;
+          background: white;
+        }
         .aboutframe{
             position: relative;
             top: -3rem;
-            left: 2.5rem;
+            left: 0.5rem;
         }
         .aboutscreen{
             position: relative;
             top: 1rem;
             left: -1rem;
+            
+            @media screen and (max-width: $mobileResolution){
+              left: 7.5rem;
+              top: -25rem;
+            }
         }
     }
     .aboutApp {
         width: 70%;
+         @media screen and (max-width: $mobileResolution){
+          width: 100%;
+          text-align: center;
+         }
       .heading {
         .title {
           font-size: 50px;
@@ -33,12 +56,19 @@
           span {
             color: #6a49f2;
           }
+          
+      @media screen and (max-width: $mobileResolution) {
+        font-size: 24px;
+      }
         }
         .minititle {
           //     width: 37%;
           //    margin: auto;
           margin-top: -1rem;
           color: #767694;
+           @media screen and (max-width: $mobileResolution){
+            margin-top: 1rem;
+           }
         }
       }
     }
@@ -48,6 +78,11 @@
       width: 70%;
       align-items: left;
       flex-wrap: wrap;
+      @media screen and (max-width: $mobileResolution){
+        display: grid;
+        grid-template-columns: repeat(2,1fr);
+        gap: 0.5rem;
+      }
       .countdetail {
         box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
         border-radius: 10px;
@@ -57,12 +92,19 @@
         gap: 0.5rem;
         align-items: center;
         color: #32236f;
+        @media screen and (max-width: $mobileResolution){
+          padding: 0.2rem;
+        }
         .cntinfo{
             text-align: left;
             line-height: 0rem;
+           
             .cnt {
                 font-size: 40px;
                 font-weight: 600;
+                @media screen and (max-width: $mobileResolution){
+                  font-size: 18px;
+                }
               }
               .cnttitle {
                   font-size: 16px;
