--- a/components/Companies/Companies.module.scss
+++ b/components/Companies/Companies.module.scss
@@ -1,10 +1,18 @@
+@import "/styles/variables.scss";
 .container{
     align-items: center;
+    @media screen and (max-width: $mobileResolution){
+      position: relative;
+      top: 22rem;
+    }
     .minicontainer{
         width: 50%;
         text-align: center;
         margin: auto;
-        border:1px solid red;
+        // border:1px solid red;
+        @media screen and (max-width: $mobileResolution){
+          width: 100%;
+        }
         .title {
             font-size: 40px;
             color: #32236f;
@@ -12,18 +20,40 @@
             span {
               color: #6a49f2;
             }
+            @media screen and (max-width: $mobileResolution){
+            
+              font-size: 24px;
+            }
           }
           .minititle {
             width: 75%;
            margin: auto;
            margin-top: 1rem;
             color: #767694;
+            @media screen and (max-width: $mobileResolution){
+              width: 100%;
+              padding: 0.5rem;
+            }
           }
+          
     }
    .swipers{
-    border:1px solid red;
+    // border:1px solid red;
     width: 80%;
     margin: auto;
     align-items: center;
+    @media screen and (max-width: $mobileResolution){
+      display: none;
+    }
    }
-}
+   .mobileswiper{
+    display: none;
+    width: 80%;
+    margin: auto;
+    align-items: center;
+    @media screen and (max-width: $mobileResolution){
+      display: block;
+      width: 90%;
+    }
+   }
+  }
