--- a/components/Manage/Manage.module.scss
+++ b/components/Manage/Manage.module.scss
@@ -4,24 +4,35 @@
   margin: auto;
   .minicontainer {
     width: 90%;
+    margin: auto;
     display: flex;
     gap: 1rem;
     padding: 10rem;
     .left {
       width: 50%;
-      border: 1px solid red;
+      // border: 1px solid red;
       padding: 0.5rem;
-// align-items: center;
-.title {
+      // align-items: center;
+      @media screen and (max-width: $mobileResolution){
+        text-align: center;
+      }
+      .title {
         font-size: 50px;
         color: #32236f;
         font-weight: 700;
+        letter-spacing: -1.5px;
         span {
           color: #6a49f2;
+        }
+        @media screen and (max-width: $mobileResolution){
+          font-size: 30px;
         }
       }
       .minititle {
         color: #767694;
+        @media screen and (max-width: $mobileResolution){
+         margin-top: -0.5rem;
+        }
       }
       .btn {
         display: flex;
@@ -32,73 +43,125 @@
           .hide {
             display: none;
           }
-        }:hover{
-            background-color:#6a49f2 ;
-            .show{
-                display: none; 
-            }
-            .hide{
-               
-                display: block;
-            }
+        }
+        :hover {
+          background-color: #6a49f2;
+          .show {
+            display: none;
+          }
+          .hide {
+            display: block;
+          }
+        }
+        @media screen and (max-width: $mobileResolution){
+          justify-content: space-around;
+          gap: 0.5rem;
+          position: relative;
+          // left:-0.5rem;
         }
       }
 
-      .count{
+      .count {
         margin-top: 2rem;
         display: flex;
+        gap: 1rem;
         align-items: center;
-       .used{
-        line-height: 0.2rem;
-        margin-top: 1rem;
-       p{
-        font-size: 15px;
-       }
-       }
+        .used {
+          line-height: 0.2rem;
+          margin-top: 1rem;
+          p {
+            font-size: 15px;
+          }
+          @media screen and (max-width: $mobileResolution){
+            line-height: 0.8rem;
+          }
+        }
+        @media screen and (max-width: $mobileResolution){
+          margin-top: 1rem;
+          padding: 0rem 2.5rem 0rem 2.5rem;
+
+        }
+      }
+      @media screen and (max-width: $mobileResolution) {
+        width: 100%;
+        padding: 0.5rem;
       }
     }
     .right {
       width: 50%;
-      border: 1px solid red;
-      .circle{
+      // border: 1px solid red;
+      .circle {
         margin: auto;
         border: 1px solid #6a49f2;
         width: 70%;
         border-radius: 50%;
         height: 350px;
-        background-color:#6a49f2 ;
+        background-color: #6a49f2;
         position: relative;
-        .msg{
-            position: relative;
-            top: 15rem;
-            right: 1.5rem;
+        .msg {
+          position: relative;
+          top: 15rem;
+          right: 1.5rem;
+          z-index: 1;
+          @media screen and (max-width: $mobileResolution){
+            top: 22rem;
+            left:-4rem;
+          }
+        }
+        .security {
+          position: relative;
+          bottom: 1rem;
+          left: 7rem;
+          @media screen and (max-width: $mobileResolution) {
             z-index: 1;
+            left: 10rem;
+            top: -4rem;
+          }
         }
-        .security{
-            position: relative;
-            bottom: 1rem;
-            left: 7rem;
+        .frame {
+          position: relative;
+          bottom: 40rem;
+          left: 4.5rem;
+          @media screen and (max-width: $mobileResolution) {
+            bottom: 45rem;
+            left: 0rem;
+          }
         }
-        .frame{
-            position: relative;
-            bottom: 40rem;
-            left: 4.5rem;
+        .screen {
+          position: relative;
+          bottom: 10rem;
+          left: 5rem;
+          @media screen and (max-width: $mobileResolution) {
+            bottom: 15rem;
+            left: 0.6rem;
+          }
         }
-        .screen{
-            position: relative;
-            bottom: 10rem;
-            left: 5rem;
+        @media screen and (max-width: $mobileResolution){
+          // width: 100%;
+          border: none;
+          background-color:white;
+       
         }
       }
     }
+    @media screen and (max-width: $mobileResolution) {
+    padding: 0rem;
+    display: block;
+    }
   }
-  .banner{
-     border: 1px solid red;
+  .banner {
+    // border: 1px solid red;
     // background-image: url('http://kalanidhithemes.com/live-preview/landing-page/apper/all-demo/01-app-landing-page-defoult/images/banner-shape.svg');
     // background: no-repeat;
     width: 100%;
     // height: 500px;
     // background: #d3d0de ;
     margin-top: -10rem;
+    @media screen and (max-width: $mobileResolution){
+      // display: none;
+      position: relative;
+      top: 22rem;
+
+    }
   }
 }
