--- a/styles/lib/ant-d.scss
+++ b/styles/lib/ant-d.scss
@@ -49,9 +49,10 @@
   }
 
   &-btn {
-    height: 3.6rem;
-    padding-left: 2rem;
-    padding-right: 2rem;
+    height: fit-content;
+    // padding-left: 2rem;
+    // padding-right: 2rem;
+  
     border-radius: 2rem;
     text-transform: uppercase;
     font-weight: 600;
