--- a/components/Design/Design.module.scss
+++ b/components/Design/Design.module.scss
@@ -1,84 +1,122 @@
 @import "/styles/variables.scss";
-.container{
-width: 80%;
-margin: auto;
-margin-top: 5rem;
-@media screen and (max-width: $mobileResolution){
+.container {
+  width: 80%;
+  margin: auto;
+  margin-top: 5rem;
+  @media screen and (max-width: $mobileResolution) {
     position: relative;
-    top: 20rem;
+    top: 10rem;
   }
-    .minicontainer{
-       display: flex;
-       gap: 1.5rem;
-       .designInfo{
-        width: 50%;
-        .heading{
-            .title {
-                font-size: 50px;
-                color: #32236f;
-                font-weight: 700;
-                span {
-                  color: #6a49f2;
-                }
-                @media screen and (max-width: $mobileResolution) {
-                    font-size: 24px;
-                  }
-              }
-              .minititle {
-                width: 75%;
-            //    margin: auto;
-               margin-top: -1rem;
-                color: #767694;
-                @media screen and (max-width: $mobileResolution) {
-                    width: 90%;
-                    margin-top: 0.5rem;
-                  }
-              }
-        }
-        .description{
-            .desc{
-                margin-top: 2rem;
-                display: flex;
-                align-items: center;
-                gap: 1rem;
-                .designTitle{
-                    font-size: 20px;
-                    font-weight: 600;
-                    color: #32236f;
-                    margin-bottom: 0rem;
-                          }
-                          .designdesc{
-                              width: 72%;
-                              font-weight: 500;
-                              font-size: 16px;
-                              color: #404043;
-                            
-                          }
-            }
-       
-        }
-       }
-       .imgwraaper{
-        height: 540px;
-        background: #e5e5e7;
-        width: 50%;
-        border-radius: 50%;
-        margin-top: 5rem;
-        .secure{
-            position: relative;
-            bottom: 10rem;
-        }
-        .modern{
-            position: relative;
-    bottom: 14rem;
-    left: -3rem
-        }
-        .small{
-            bottom: 23rem;
-            left: 18rem;
-            position: relative;
-
-        }
-       }
+  .minicontainer {
+    display: flex;
+    gap: 1.5rem;
+    @media screen and (max-width: $mobileResolution) {
+      display: block;
     }
+    .designInfo {
+      width: 50%;
+      @media screen and (max-width: $mobileResolution) {
+        width: 100%;
+      }
+      .heading {
+        @media screen and (max-width: $mobileResolution) {
+          text-align: center;
+        }
+        .title {
+          font-size: 50px;
+          color: #32236f;
+          font-weight: 700;
+          span {
+            color: #6a49f2;
+          }
+          @media screen and (max-width: $mobileResolution) {
+            font-size: 24px;
+          }
+        }
+        .minititle {
+          width: 75%;
+          //    margin: auto;
+          margin-top: -1rem;
+          color: #767694;
+          @media screen and (max-width: $mobileResolution) {
+            width: 100%;
+            margin-top: 0.5rem;
+          }
+        }
+      }
+      .description {
+        .desc {
+          margin-top: 2rem;
+          display: flex;
+          align-items: center;
+          gap: 1rem;
+          @media screen and (max-width: $mobileResolution) {
+            display: block;
+            text-align: center;
+          }
+          .designTitle {
+            font-size: 20px;
+            font-weight: 600;
+            color: #32236f;
+            margin-bottom: 0rem;
+          }
+          .designdesc {
+            width: 72%;
+            font-weight: 500;
+            font-size: 16px;
+            color: #404043;
+            @media screen and (max-width: $mobileResolution) {
+              width: 100%;
+            }
+          }
+        }
+      }
+    }
+    .imgwraaper {
+      height: 540px;
+      background: #e5e5e7;
+      width: 50%;
+      border-radius: 50%;
+      margin-top: 5rem;
+      @media screen and (max-width: $mobileResolution) {
+        width: 100%;
+        background: white;
+        height: 450px;
+      }
+      .main {
+        @media screen and (max-width: $mobileResolution) {
+          width: 70%;
+        }
+      }
+      .secure {
+        position: relative;
+        bottom: 10rem;
+        @media screen and (max-width: $mobileResolution) {
+          width: 20%;
+          bottom: 7rem;
+          right: 1rem;
+        }
+      }
+      .modern {
+        position: relative;
+        bottom: 14rem;
+        left: -3rem;
+        @media screen and (max-width: $mobileResolution){
+            width: 55%;
+            left: 10.5rem;
+            bottom:17rem;
+        }
+      }
+      .small {
+        bottom: 23rem;
+        left: 18rem;
+        position: relative;
+        @media screen and (max-width: $mobileResolution) {
+          left: 10rem;
+          top: -15rem;
+          width: 60%;
+        }
+      }
+    }
+  }
 }
